--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,71 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap');
+
 body {
+  background: rgba(130, 204, 221, .5);
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Montserrat';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+.app-header {
+  color: rgba(10, 61, 98,1.0);
+  text-align: center;
+  font-weight: normal;
 }
+
+.card-title {
+  color: rgba(10, 61, 98,1.0);
+  font-weight: 500;
+}
+
+.cards-container {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  padding: 2rem 0;
+  justify-content: center;
+}
+
+.card {
+  padding: 1rem;
+  width: min(280px, 90%);
+  margin: 1rem;
+  border-radius: 5px;
+  transition: all .3s ease;
+}
+
+.card:hover {
+  box-shadow: 6px 6px 14px 0 rgba(130, 204, 221,1.0),
+    -8px -8px 18px 0 rgba(130, 204, 221, .5);
+}
+
+.card-image {
+  height: 14rem;
+  width: 18rem;
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+.card-image img {
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+  border-radius: 5px;
+}
+
+.card-links a {
+  color: rgba(10, 61, 98,1.0);
+  margin-right: 1rem;
+  transition: all .3s ease;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #fff;
+}
+
+
+
+
